docs(performance): enhance performance documentation with latest JDK improvements
Enhanced by-topic/core/performance/ with comprehensive updates:

index.md:
- Added detailed JIT compilation architecture diagram
- Added AOT cache section (JEP 483) with 42% startup improvement
- Added JDK 25 JFR enhancements (JEP 509, 518, 520)
- Added JDK 26 performance improvements (JEP 514, 515, 519, 522)
- Added Project Leyden status overview
- Enhanced performance best practices section
- Added performance comparison table across JDK versions
- Added contributor statistics based on git history

timeline.md:
- Added detailed version evolution from JDK 1.0 to JDK 26
- Added git commit history for JIT/JFR/AOT improvements (2024-2026)
- Added detailed code examples for each optimization technique
- Added JDK 22-26 performance improvements
- Added JFR evolution timeline
- Added comprehensive external sources and references

Data sources:
- OpenJDK git log (master branch, 2024-2026)
- Inside.java performance articles
- OpenJDK JEP documentation
- Erik Gahlin's JFR blog
- Project Leyden repository

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>